# jads_causal_2026

./: README.md  _quarto.yml  pyproject.toml
_output/week_09_ML_vs_Causal/: week09_notebook.html  week09_notebook_fixed.html
_output/week_11_FWL_Theorem/: easter_teaser_notebook.html  week11_FWL_Theorem_Slides.html  week11_teaser.html
_output/week_12_DML/: week12_notebook_student.html  week12_notebook_w_answers.html
week_09_ML_vs_Causal/: week09_notebook.qmd  week09_notebook_fixed.qmd  week09_print.qmd
week_11_FWL_Theorem/: easter_teaser_notebook.qmd  week11_FWL_Theorem_Slides.qmd
week_12_DML/: week12_notebook_student.qmd  week12_notebook_w_answers.qmd
