[project]
name = "CIBD_2026"
version = "0.1.0"
description = "CIBD_2026 — course notebooks"
requires-python = "==3.11.*"

dependencies = [
    # core scientific stack
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scipy>=1.13.0",
    "statsmodels>=0.14.4",
    "scikit-learn>=1.5.0",
    "matplotlib==3.8.4",
    # graph utilities
    "networkx>=3.2",
    # quarto / jupyter runtime
    "ipykernel>=6.29.0",
    "pyyaml>=6.0",
    "nbformat>=5.10.4",
    "nbclient>=0.10.4",
    # week 12–15 (add when needed)
    # "doubleml>=0.9",
    # "econml>=0.15",
]